[package]
name = "dray"
version = "1.0.0"
description = "A Dray App"
authors = ["Dray"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
log = { path = "./log" }

tokio = { version = "1.44.0", features = ["full"] }

actix-files = "0.6.6"
actix-web = "4.9"

tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-fs = "2.0.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

dirs = "6.0.0"
once_cell = "1.21.0"
