[package]
name = "dray"
version = "1.0.0"
description = "A Dray App"
authors = ["Dray"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
logger = { path = "./logger" }

log = "0.4.26"
env_logger = "0.11.7"

dirs = "6.0.0"
chrono = "0.4.40"
sysinfo = "0.33.1"
once_cell = "1.21.1"
nix = { version = "0.29.0", features = ["fs"] }
#rustc_version = "0.4.1"

#tokio = { version = "1.44.1", features = ["full"] }

actix-files = "0.6.6"
actix-web = "4.10.2"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tauri = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.2.6"
#tauri-plugin-fs = "2.0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wininet"] }
