[package]
name = "dray"
version = "1.0.0"
description = "A Dray App"
authors = ["Dray"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
logger = { path = "./logger" }

log = "0.4"
env_logger = "0.11"

dirs = "6"
chrono = "0.4"
sysinfo = "0.33"
once_cell = "1"

#nix = { version = "0.29", features = ["fs"] }
#rustc_version = "0.4"
#tokio = { version = "1", features = ["full"] }

actix-files = "0.6"
actix-web = "4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wininet"] }
